2006-07-16  Derek Atkins  <derek@ihtfp.com>

	* configure.in:
	  check for (g-wrap) module (#347680)
	  Apparently some distributions ship g-wrap-config separately
	  from the g-wrap.scm guile module.

2006-07-16  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-main-window.c: Do not move windows on
	  restoration that would be offscreen.

2006-07-15  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncAddress.[ch]:
	  Make GncAddress more QOF compliant.  (#343726)
	  Adds BeginEdit/CommitEdit calls.

	* src/business/business-gnome/dialog-invoice.c:
	  Set the summary bar values when the window is first opened (#345978).

2006-07-15  Andreas Köhler  <andi5.py@gmx.net>

	* src/report/report-system/html-text.scm: Remove a duplicate of
	  gnc:html-text?.

2006-07-15  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c: Remove obsolete
	buttons for aqbanking/hbci setup that are unneeded. Fix crash due
	to dangling points by deleting all pointers after calling
	AB_Banking_Fini.

2006-07-14  Derek Atkins  <derek@ihtfp.com>

	* configure.in:
	* autogen.sh:
	  make sure that po/POTFILES.in exists so configure doens't complain.

	* configure.in:
	  check for (g-wrap gw-glib-spec) instead of (g-wrap) #347404.

2006-07-14  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome/schemas/Makefile.am: Add
	  apps_gnucash_scheduled_transctions.schemas.in. Fixes #340641.

	* src/register/ledger-core/split-register-control.c:
	* src/register/ledger-core/split-register-model.c: Let
	  GtkMessageDialog render the headers of two warnings in bold
	  font.

2006-07-13  Andreas Köhler  <andi5.py@gmx.net>

	* doc/tip_of_the_day.list.in:
	* lib/libqof/backend/file/qsf-backend.c:
	* src/gnome-search/search.glade:
	* src/gnome-utils/druid-gnc-xml-import.c:
	* src/gnome-utils/glade/preferences.glade:
	* src/gnome-utils/gnc-file.c:
	* src/gnome/schemas/apps_gnucash_general.schemas.in:
	* src/gnome/gnc-plugin-page-account-tree.c: