@@ -5,6 +5,9 @@
 	  Apparently some distributions ship g-wrap-config separately
 	  from the g-wrap.scm guile module.
 
+	* src/import-export/qif-import/qif-file.scm:
+	  Ignore any unknown !Option specification.  Fixes #160735.
+
 2006-07-16  Andreas Köhler  <andi5.py@gmx.net>
 
 	* src/gnome-utils/gnc-main-window.c: Do not move windows on
